--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@
 
 # Naše binárka:
 ifj
+
+# Dokumentace:
+dokumentace-ifj/dokumentace.aux
+dokumentace-ifj/dokumentace.dvi
+dokumentace-ifj/dokumentace.log
+dokumentace-ifj/dokumentace.pdf
+dokumentace-ifj/dokumentace.ps
+dokumentace-ifj/dokumentace.toc
+dokumentace-ifj/fit_logo-eps-converted-to.pdf
